# ClipboardManager

./: .gitignore  Cargo.toml  INTALLATION.md  LICENSE  README.md  build.rs
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  utils.rs
src/clipboard/: mod.rs  watcher.rs
src/storage/: mod.rs  sled_storage.rs
src/ui/: components.rs  mod.rs  style.rs  subscription.rs
